--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ background: linear-gradient(to right, #FFFFFF, #6DD5FA, #2980B9); /* W3C, IE 10+
     
 
 }
-
+//Colors match the theme
+//Styling is efficient and looks good
 
 #container{
     box-shadow: 0 0 3px rgba(0,0,0,0.1);
